--- a/we32dis/Cargo.toml
+++ b/we32dis/Cargo.toml
@@ -2,6 +2,10 @@
 name = "we32dis"
 version = "0.1.0"
 authors = ["Seth Morabito <web@loomcom.com>"]
+edition = "2018"
 
 [dependencies]
-clap = "2.22.1"
+clap = "2.32.0"
+byteorder = "1"
+chrono = "0.4.6"
+bitflags = "1.0.4"
